Change bg Color

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<HUGHSMITH.COM ></title>
+	<title>HUGHSMITH.COM </title>
 
 	<style type="text/css">
 		body{
-			background-color: blue;
-		font-font-family: "arial,helvetica, san-serif;
+			background-color: pink;
+		font-font-family: arial,helvetica, san-serif;
 		}
 
 	        
