--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>HUGHSMITH.COM </title>
+	<head>
+		<title>HUGHSMITH.COM </title>
 
-	<style type="text/css">
-		body{
-			background-color: pink;
-		font-font-family: arial,helvetica, san-serif;
-		}
+		<style type="text/css">
+			body{
+				background-color: pink;
+				font-family: arial,helvetica, san-serif;
+			}
 
-	        
+		        
 
-	</style>
-</head>
-<body>
-<H1>HUGHSMITH 1111</H1>
-<P>MOMENTS.STORIES.PHOTOGRAPHY.</P>
-</body>
+		</style>
+	</head>
+	<body>
+		<h1>HUGHSMITH 1111</h1>
+		<p>MOMENTS.STORIES.PHOTOGRAPHY.</p>
+	</body>
 </html>
