--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>HUGHSMITH ROCK</h1>
+		<h1>HUGHSMITH</h1>
 		<p>MOMENTS.STORIES.PHOTOGRAPHY.</p>
 	</body>
 </html>
