--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 	<body>
 		<h1>HUGHSMITH</h1>
 		<p>MOMENTS.STORIES.PHOTOGRAPHY.</p>
+		<P>I am a big fan of the <a href="https://www.jstarphotography.net/">New York Knicks</a></P>
+		<img src="cat.jpg">
 	</body>
 </html>
